--- a/ward-staff.html
+++ b/ward-staff.html
@@ -1,161 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ward Staff Allocation</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <link rel="stylesheet" href="ward-staff.css">
+    <title>Ward Staff Allocation</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons library -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="/static/ward-staff.css">
 </head>
 <body>
-  <main class="page allocation-page">
-    <section class="allocation-form dark">
-      <div class="container">
-        <div class="block-heading">
-          <h2>Ward Staff Allocation</h2>
-          <p>Week Beginning: 9-Jan-96</p>
-        </div>
-        <form>
-          <div class="details-container">
-            <div class="details-column">
-              <h3 class="title">
-                Ward Number: 
-                <select class="form-control">
-                  <option>Ward 11</option>
-                  <!-- Add more options as needed -->
-                </select>
-              </h3>
-              <h3 class="title">Ward Name: Orthopaedic</h3>
-              <h3 class="title">Location: Block E</h3>
+    <main class="page allocation-page">
+        <section class="allocation-form dark">
+            <div class="container-fluid">
+                <form id="wardAllocationForm" action="/submit-ward-allocation" method="post">
+                    <input type="hidden" name="formType" value="wardAllocation">
+                    <div class="block-heading">
+                        <h2>Ward Staff Allocation</h2>
+                        <label for="weekBeginning">Week Beginning:</label>
+                        <input type="date" class="form-control" id="weekBeginning" name="weekBeginning">
+                    </div>
+
+                    <div class="details-container">
+                        <div class="details-column">
+                            <h3 class="title">
+                                Ward Number: 
+                                <select class="form-control" id="wardNumber" name="wardNumber">
+                                    <option></option>
+                                    <!-- Options will be populated dynamically -->
+                                </select>
+                            </h3>
+                            <h3 class="title">Ward Name: <span type="hidden" id="wardName" name="wardName"></span></h3>
+                            <h3 class="title">Location: <span type="hidden" id="location" name="location"></span></h3>
+                        </div>
+                        <div class="details-column">
+                            <h3 class="title">
+                                Charge Nurse: 
+                                <select class="form-control" id="chargeNurse" name="chargeNurse">
+                                    <option></option>
+                                    <!-- Options will be populated dynamically -->
+                                </select>
+                            </h3>
+                            <h3 class="title">Staff Number: <span id="staffNumber" name="staffNumber"></span></h3>
+                            <h3 class="title">Tel Extn: <span type="hidden" id="telExtn" name="telExtn"></span></h3>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-end mb-2">
+                        <button type="button" class="btn btn-primary" id="staff-add-row-btn">Add New Row</button>
+                    </div>
+                </form>
+                <form id="staffAllocationForm" action="/submit-staff-allocation" method="post">
+                    <input type="hidden" name="formType" value="staffAllocation">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Staff No.</th>
+                                <th>Name</th>
+                                <th>Address</th>
+                                <th>Tel No</th>
+                                <th>Position</th>
+                                <th>Shift</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="staffTable">
+                            <!-- Rows will be added dynamically -->
+                        </tbody>
+                    </table>
+                    <div class="text-center mt-4">
+                        <button type="button" class="btn btn-primary" id="submit-btn">Submit</button>
+                    </div>
+                </form>
             </div>
-            <div class="details-column">
-              <h3 class="title">
-                Charge Nurse: 
-                <select class="form-control">
-                  <option>Moira Samuel</option>
-                  <!-- Add more options as needed -->
-                </select>
-              </h3>
-              <h3 class="title">Staff Number: S011</h3>
-              <h3 class="title">Tel Extn: 7711</h3>
-            </div>
-          </div>          
-            <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th>Staff No.</th>
-                  <th>Name</th>
-                  <th>Address</th>
-                  <th>Tel No</th>
-                  <th>Position</th>
-                  <th>Shift</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>
-                    <select class="form-control">
-                      <option>S098</option>
-                      <!-- Add more options as needed -->
-                    </select>
-                  </td>
-                  <td contenteditable="true">Carol Cummings</td>
-                  <td contenteditable="true">15 High Street, Edinburgh</td>
-                  <td contenteditable="true">0131-334-5677</td>
-                  <td>Charge Nurse</td>
-                  <td>
-                    <select class="form-control">
-                      <option>Late</option>
-                      <option>Early</option>
-                      <option>Night</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <select class="form-control">
-                      <option>S123</option>
-                      <!-- Add more options as needed -->
-                    </select>
-                  </td>
-                  <td contenteditable="true">Morgan Russell</td>
-                  <td contenteditable="true">23A George Street, Broxburn</td>
-                  <td contenteditable="true">01506-67676</td>
-                  <td>Charge Nurse</td>
-                  <td>
-                    <select class="form-control">
-                      <option>Late</option>
-                      <option>Early</option>
-                      <option>Night</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <select class="form-control">
-                      <option>S167</option>
-                      <!-- Add more options as needed -->
-                    </select>
-                  </td>
-                  <td contenteditable="true">Robin Plevin</td>
-                  <td contenteditable="true">7 Glen Terrace, Edinburgh</td>
-                  <td contenteditable="true">0131-339-6123</td>
-                  <td>Doctor</td>
-                  <td>
-                    <select class="form-control">
-                      <option>Late</option>
-                      <option>Early</option>
-                      <option>Night</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <select class="form-control">
-                      <option>S234</option>
-                      <!-- Add more options as needed -->
-                    </select>
-                  </td>
-                  <td contenteditable="true">Amy O'Donnell</td>
-                  <td contenteditable="true">234 Prices Street, Edinburgh</td>
-                  <td contenteditable="true">0131-334-9099</td>
-                  <td>Charge Nurse</td>
-                  <td>
-                    <select class="form-control">
-                      <option>Late</option>
-                      <option>Early</option>
-                      <option>Night</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <select class="form-control">
-                      <option>S344</option>
-                      <!-- Add more options as needed -->
-                    </select>
-                  </td>
-                  <td contenteditable="true">Laurence Burns</td>
-                  <td contenteditable="true">1 Apple Drive, Edinburgh</td>
-                  <td contenteditable="true">0131-344-9100</td>
-                  <td>Doctor</td>
-                  <td>
-                    <select class="form-control">
-                      <option>Late</option>
-                      <option>Early</option>
-                      <option>Night</option>
-                    </select>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </form>
-      </div>
-    </section>
-  </main>
+        </section>
+    </main>
+    <!-- Make sure your custom script is loaded last -->
+    <script src="/static/index.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </html>
